# yt-dl-tauri

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: index.html  main.js  package-lock.json  package.json  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: binary_manager.rs  config.rs  main.rs
src/css/: style.css
src/js/: binaries.js  main.js  menu.js  settings.js
src/src/: main.js
