[package]
build = "build.rs"  # This line is crucial
name = "yt-dl-tauri"
version = "1.0.0"
authors = ["Shannon huggins <x@ptr.me>"]
edition = "2021"

[dependencies]
tauri = { version = "2.5.0", features = [] }
dirs-next = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2.0.0" 
reqwest = { version = "0.12", features = ["blocking"] } 
scraper = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }  # Add if missing
[workspace]
